--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 }
 
 .cabeçalho{
-    background-image: url(legiao__W87RhLNaD6M.jpg.jpeg);
+    background-image: url(imgs/banner.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
